--- a/The Complete Node.js Developer Course/web-server/templates/partials/header.hbs
+++ b/The Complete Node.js Developer Course/web-server/templates/partials/header.hbs
@@ -1,7 +1,9 @@
-<h1>{{title}}</h1>
+<header>
+    <h1>{{title}}</h1>
 
-<div>
-    <a href="/">Home</a>
-    <a href="/about">About</a>
-    <a href="/help">Help</a>
-</div>
+    <div>
+        <a href="/">Home</a>
+        <a href="/about">About</a>
+        <a href="/help">Help</a>
+    </div>
+</header>
