--- a/The Complete Node.js Developer Course/web-server/templates/views/404page.hbs
+++ b/The Complete Node.js Developer Course/web-server/templates/views/404page.hbs
@@ -5,9 +5,8 @@
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link rel="stylesheet" href="/css/styles.css">
-        <link rel="icon" href="/img/weather.png">
         <script src="/js/app.js"></script>
-        <title>Home</title>
+        <title>404 Page</title>
     </head>
     <body>
         <div class="main-content">
