--- a/The Complete Node.js Developer Course/web-server/templates/views/help.hbs
+++ b/The Complete Node.js Developer Course/web-server/templates/views/help.hbs
@@ -5,11 +5,15 @@
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link rel="stylesheet" href="/css/styles.css">
+        <link rel="icon" href="/img/weather.png">
         <script src="/js/app.js"></script>
         <title>Help</title>
     </head>
     <body>
-        {{>header}}
+        <div class="main-content">
+            {{>header}}
+        </div>
+        
        {{>footer}}
     </body>
 </html>
