--- a/The Complete Node.js Developer Course/web-server/templates/views/index.hbs
+++ b/The Complete Node.js Developer Course/web-server/templates/views/index.hbs
@@ -6,13 +6,20 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link rel="stylesheet" href="/css/styles.css">
         <link rel="icon" href="/img/weather.png">
-        <script src="/js/app.js"></script>
+        <script src="/js/app.js" defer></script>
         <title>Home</title>
     </head>
     <body>
         <div class="main-content">
             {{>header}}
+            <form>
+                <input type="text" name="" placeholder="Location" value="">
+                <button>submit</button>
+            </form>
+            <p id="msg1"></p>
+            <p id="msg2"></p>
         </div>
+        
        
        {{>footer}}
     </body>
