--- a/The Complete Node.js Developer Course/web-server/templates/views/about.hbs
+++ b/The Complete Node.js Developer Course/web-server/templates/views/about.hbs
@@ -11,6 +11,9 @@
     <body>
         <div class="main-content">
             {{>header}}
+            <p>
+                This site was created with &hearts; 
+            </p> 
         </div>
         
         {{>footer}}
