--- a/The Complete Node.js Developer Course/web-server/templates/views/index.hbs
+++ b/The Complete Node.js Developer Course/web-server/templates/views/index.hbs
@@ -18,6 +18,7 @@
             </form>
             <p id="msg1"></p>
             <p id="msg2"></p>
+            <img id="icon" src="" >
         </div>
         
        
